--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -133,7 +133,7 @@ ul.customList {
 }
 
 ul.customList li::before{
-    content: "\135";
+    content: "\f135";
     font-family: "Font Awesome 5 Free";
     padding: 0 10px 0 0;
     color: #069;
