--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,13 +15,13 @@ layout: default
 <div class="PageNavigation">
 
   {% if page.previous %}
-    <a class="prev" href="{{ site.baseurl }}{{page.previous.url}}"><i class="fa fa-arrow-circle-left"></i> <tt>{{page.previous.title}}</tt></a>
+    <a class="prev" href="{{ site.baseurl }}{{page.previous.url}}"><i class="fa fa-arrow-left"></i>&nbsp;<small><tt>{{page.previous.title}}</tt></small></a>
     <br>
   {% endif %}
 
 
   {% if page.next %}
-    <a class="next" href="{{ site.baseurl }}{{page.next.url}}">{{page.next.title}} <i class="fa fa-arrow-circle-right"></i> </a>
+    <a class="next" href="{{ site.baseurl }}{{page.next.url}}"><small><tt>{{page.next.title}}</tt></small>&nbsp;<i class="fa fa-arrow-right"></i> </a>
   {% endif %}<br>
   
   <a href=#top><i class="fa fa-arrow-up fa-lg"></i></a>&nbsp;
