--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -150,9 +150,9 @@ ul.customListPosts li::before{
     color: #111;
 }
 
-div.button_left {
+div.button-right {
     ffont-family: "monospace";
-    align= right;
+    align: right;
     width: 10%;
     height: 1.5em; 
     margin: 0 auto;
