--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -150,15 +150,16 @@ ul.customListPosts li::before{
     color: #111;
 }
 
-div.button-right {
+div.tiny_box {
     font-family: monospace;
+    float: right;
     width: 18%;
     height: 1.5em; 
     margin: 0 auto;
-    margin-bottom: 15px;
-    padding: 1em;
+    margin-bottom: 3px;
+    padding: 0.2em;
     border-radius: 5px;
-    text-align: center;
+    text-align: middle;
     background-color: rgba(0, 0, 0, 0.06);
     color: #111;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
