--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,8 @@
         <h3 class="title">{{ page.title }}</h3>
 
         <div align="center" style="margin-bottom: 15px;">&mdash;&nbsp;<i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'></i>&nbsp;&mdash;</div>
+        {% endif %}
+        
         {{ content }}
 
       </section>
