--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,11 @@
         </ul>
       </header>
       <section>
-        {% if site.github.is_project_page != true %}
+        {% if site.github.is_project_page %}
+        
+            
+        
+        {% else %}
         <h3 class="title">{{ page.title }}</h3>
 
         <div align="center" style="margin-bottom: 15px;">&mdash;&nbsp;<i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'></i>&nbsp;&mdash;</div>
