--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
         </ul>
       </header>
       <section>
-        {% if {{ page.title }} == "" %}
+        {% if page.url != "/index.html" %}
 
         <h3 class="title">{{ page.title }}</h3>
 
@@ -50,7 +50,7 @@
         
       <div align="center" style="margin-bottom: 15px;">&mdash;&nbsp;<i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'></i>&nbsp;&mdash;</div>    
         
-      {% if site.github.is_project_page %}
+      {% if page.url != "/index.html" %}
 
         <a href=#top><i class="fa fa-arrow-up fa-lg"></i></a>&nbsp;
   
