--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,7 @@
     {% if site.github.is_project_page %}
       <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
     {% endif %}
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+      <p style="color: #111;" >Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
             
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
