--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -150,7 +150,7 @@ ul.customListPosts li::before{
     color: #111;
 }
 
-div.tiny_box {
+div.button_gray {
     font-family: monospace;
     float: right;
     width: 20%;
@@ -162,5 +162,21 @@ div.tiny_box {
     text-align: center;
     background-color: rgba(0, 0, 0, 0.02);
     color: #111;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+}
+
+div.button_white {
+    font-family: monospace;
+    float: right;
+    width: 20%;
+    height: 1.5em; 
+    margin: 0 auto;
+    margin-bottom: 3px;
+    padding: 0.5em;
+    border-radius: 5px;
+    text-align: center;
+    background-color: #ffffff;
+    color: #069;
+    border: 2px solid #068;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
 }
