--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -169,11 +169,11 @@ div.button_white {
     font-family: monospace;
     font-size: smaller;
     float: right;
-    width: 20%;
-    height: 1.25em; 
+    //width: 20%;
+    height: 1.4em; 
     margin: 0 auto;
-    margin-bottom: 15px;
-    padding: 0.3em;
+    margin-bottom: 25px;
+    padding: 0.15em;
     border-radius: 5px;
     text-align: center;
     background-color: #ffffff;
