--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -170,10 +170,10 @@ div.button_white {
     font-size: smaller;
     float: right;
     //width: 20%;
-    height: 1.4em; 
+    //height: 1.4em; 
     margin: 0 auto;
     margin-bottom: 25px;
-    padding: 0.25em;
+    padding: 0.3em;
     border-radius: 5px;
     text-align: center;
     background-color: #ffffff;
