--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -168,7 +168,7 @@ div.button_gray {
 div.button_white {
     font-family: monospace;
     font-size: smaller;
-    float: right;
+    //float: right;
     //width: 20%;
     //height: 1.4em; 
     margin: 0 auto;
