--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -168,6 +168,7 @@ div.button_gray {
 div.button_white {
     font-family: monospace;
     font-size: smaller;
+    display:flex;
     margin: 0 auto;
     margin-bottom: 5px;
     padding: 0.3em;
