--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -167,7 +167,7 @@ div.button_gray {
 
 div.button_white {
     font-family: monospace;
-    font-size: smaller;
+    font-size: 0.5em;
     margin: 0 auto;
     margin-bottom: 5px;
     padding: 0.3em;
