--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -179,12 +179,12 @@ div.button_white {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
 }
 
-div p.button_white {
+p.button_white {
     display: inline-block;
     font-family: monospace;
     font-size: 1vw;
     margin: 0 auto;
-    margin-bottom: 5px;
+    margin-bottom: 25px;
     padding: 0.3em;
     border-radius: 5px;
     text-align: center;
