--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -181,7 +181,7 @@ div.button_white {
 
 div p.button_white {
     display: inline-block;
-    height: 7em
+    height: 7em;
     font-family: monospace;
     font-size: 1.5vw;
     margin: 0 auto;
